# Hakyll

./: .gitignore  .gitmodules  Hlog.cabal  LICENSE  about.md  contact.html  friends.html  index.html  site.hs  stack.yaml
css/: banana.css  fifthave.css  friends.css
js/: proof-collapse.js
lib/: Deploy.hs
old_posts/: TT1.md  TT2.md  bzoj2956.md  bzoj4942.md  bzoj5250.md  bzoj5475.md  commutative_algebra_1.md  commutative_algebra_2.md  commutative_algebra_3.md  homology_algebra_1.md  homology_algebra_2.md  qd-acm-2018-solutions.md  rqy-s-Code-Style-for-OI.md
posts/: 2022-06-30-test.md  AG-HW2.btex  AG-HW3.btex  hartshorne-2-2.btex  hartshorne-2-3.btex  hartshorne-2-4.btex  hartshorne-3-2.btex  hartshorne-3-3.btex
posts/preamble/: AG.btex
templates/: archive.html  btex-post.html  default.html  post.html
tex/: AG-HW2.tex  AG-HW3.tex  hartshorne-2-2.tex  hartshorne-2-3.tex  hartshorne-2-4.tex  hartshorne-3-2.tex
