name:               Hlog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , containers == 0.6.4.*
                  , hakyll == 4.15.*
                  , pandoc == 2.*
                  , time == 1.9.*
                  , commonmark == 0.2.2
                  , commonmark-extensions == 0.2.3.*
                  , http-client == 0.7.3.*
                  , process == 1.6.16.*
                  , aeson == 2.1.1.*
                  , hashable == 1.4.1.*
                  , filepath == 1.4.2.*
                  , bytestring == 0.10.12.*
                  , directory == 1.3.6.*
                  , deploy
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

library deploy
  hs-source-dirs:   lib
  exposed-modules:  Deploy
  build-depends:    base == 4.*
                  , containers == 0.6.4.*
                  , hakyll == 4.15.*
                  , pandoc == 2.*
                  , time == 1.9.*
                  , commonmark == 0.2.2
                  , commonmark-extensions == 0.2.3.*
                  , http-client == 0.7.3.*
                  , process == 1.6.16.*
                  , aeson == 2.1.1.*
                  , hashable == 1.4.1.*
                  , filepath == 1.4.2.*
                  , bytestring == 0.10.12.*
                  , directory == 1.3.6.*
  default-language: Haskell2010
