name:               Hlog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base
                  , containers
                  , hakyll
                  , pandoc
                  , time
                  , commonmark == 0.2.1.1
                  , commonmark-extensions == 0.2.3.*
                  , http-client
                  , aeson
                  , hashable
                  , filepath
                  , bytestring
                  , directory
                  , time-locale-compat
                  , deploy
  default-language: Haskell2010

library deploy
  hs-source-dirs:   lib
  exposed-modules:  Deploy
  build-depends:    base
                  , containers
                  , hakyll
                  , commonmark == 0.2.1.1
                  , commonmark-extensions == 0.2.3.*
                  , process
                  , hashable
                  , filepath
                  , bytestring
                  , directory
  default-language: Haskell2010
